added bart counter project

--- a/assorted_projects.html
+++ b/assorted_projects.html
@@ -104,6 +104,8 @@
             <li><a href="earthquakes.html" >
                 Earthquakes - Live Site
             </a></li>
+            <li><a href="bart_countdown.html" >
+            Bart Timer - Live Site</a></li>
         </ul>
 
         <h6>Page Navigation</h6>
@@ -111,6 +113,7 @@
             <ul>
                 <li><a href="#earthquake" class="arrow">Earthquake Map</a></li>
                 <li><a href="#ballAnimation" class="arrow">Ball Animation</a></li>
+                <li><a href="#bartTimer" class="arrow">Bart Timer</a></li>
             </ul>
         </menu>
 
@@ -200,6 +203,21 @@
 
         animateBalls();
         </script>
+
+        </section>
+
+        <section class="grid col-three-quarters mq2-col-two-thirds mq3-col-full">
+
+        <h4 style="text-align:center; text-weight:bold;">Bart Timer</h4><br>
+
+        <figure class="" id='bartTimer'>
+            <a href="bart_countdown.html" >
+            <img src="img/bart_map.gif" alt="" >
+            </a>
+            <figcaption>
+                <p>A simple site that tracks and counts down the time to the south bound Downtown Berkeley Bart trains.</p>
+            </figcaption>
+        </figure>
 
         </section>
 
