--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -123,11 +123,10 @@
 
       <p style="font-size:18px">Ahoy friends and family!</p>
 
-            <p>Welcome to our temporary wedding website. We are looking forward to sharing our special day with you at one of our favorite spots. Lindsay went to <a href="http://www.uncw.edu" target="_">UNC Wilmington</a> and Colin proposed to Lindsay at a beach house right by where we are having the ceremony.</p>
+            <p>Welcome to our wedding website. We are looking forward to sharing our special day with you at one of our favorite spots. Lindsay went to <a href="http://www.uncw.edu" target="_">UNC Wilmington</a> and Colin proposed to Lindsay at a beach house right by where we are having the ceremony.</p>
 
             <p>Wrightsville Beach is a popular vacation spot in North Carolina so we encourage you to book your travel early. The ceremony will be held on the beach (Beach Access 12) and the reception will be at a restaurant near by. Check out the map to the right to see where everything is located. Depending on your schedule you can book at one of the hotels listed below or if you are able to soak up the sun a little bit longer we have also included links to local beach house rental websites.</p>
 
-            <p>Lindsay's brother will be taking the helm soon for the website development so there will be much more to see in a few weeks.</p>
     </div>
 
 
@@ -189,7 +188,7 @@
         Wilmington, NC 28403</p>
         <p>1 King - $169/night + tax<br>
         2 Doubles - $199/night + tax</p>
-        <p>Book by May 9th to recieve group rate<br>
+        <p>Book by May 9th to receive group rate<br>
         <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-GGW-20150619/index.jhtml?WT.mc_id=POG" target="_">Online reservations</a><br>
         Call for reservation: 910-256-9600</p></p>
       </figure>
@@ -207,7 +206,7 @@
         Wrightsville Beach, NC 28480</p>
         <p>Ocean Front - $299/night + tax<br>
         Harbor - $269/night + tax</p>
-        <p>Book by May 9th to recieve group rate<br>
+        <p>Book by May 9th to receive group rate<br>
         Call for reservation: 910-256-2231</p>
       </figure>
   </section>
