--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -135,6 +135,7 @@
         <h3 id='tableTitle'>Wedding Locations</h3>
         <div id='eqTable'>
         </div>
+        <p style='text-align:center'>*Draw Bridge opens on the hour.</p>
      </div>
 
      </section>
