new pages to wedding site

--- a/registry.html
+++ b/registry.html
@@ -61,11 +61,6 @@
 
     </script>
 
-    <!-- leaflet js -->
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-    <script src="js/wedding_map.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <link rel="stylesheet" type="text/css" href="css/wedding_map.css">
 
 </head>
 
@@ -108,39 +103,34 @@
 
 
 <div class="home-page main">
-  <section class="grid-wrap" >
-    <header class="grid col-full">
+<section class="works grid-wrap" style='text-align:center; '>
+  <header class="grid col-full">
       <hr>
-     <!--  <p class="fleft">Home</p> -->
-      <!-- <a href="resume.html" class="arrow fright">see my resume</a> -->
+      <h3 style="color:#0e0cbf" class="">Registry</h3>
+      <p style="font-size:14px;">What we want most for our wedding is to have all of our friends and family together.<br>
+      However, if you would like to get us something we are registered at:</p>
+      <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
     </header>
+        <figure class=" col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half" style='margin-left: auto;margin-right: auto; display: inline-block; padding-right:1em;'>
+          <a href="http://www.amazon.com/gp/registry/wedding/NEIX6VEMDEK9" target="_">
+          <img src="img/wedding/amazon-logo-300x200.png" alt="" class="thumb">
+          <span class="zoom"></span>
+          </a>
+          <figcaption>
+            <p style='font-weight:bold;'>Amazon</p>
+          </figcaption>
+        </figure>
 
-    <div class="grid col-one-half mq2-col-full aboutme">
-      <div id="personalpic">
-                <img src="img/wedding/colin_linds_pier.jpg" alt="" class="roundedimg">
-                <p style="font-size:10px; font-style:italic;">Photo Credit: First Mate, John Wierather</p>
-            </div>
-
-            <h2 style="color:#0e0cbf">6.20.2015</h2>
-
-      <p style="font-size:18px">Ahoy friends and family!</p>
-
-            <p>Welcome to our wedding website. We are looking forward to sharing our special day with you at one of our favorite spots. Lindsay went to <a href="http://www.uncw.edu" target="_">UNC Wilmington</a> and Colin proposed to Lindsay at a beach house right by where we are having the ceremony.</p>
-
-            <p>Wrightsville Beach is a popular vacation spot in North Carolina so we encourage you to book your travel early. The ceremony will be held on the beach (Beach Access 12) and the reception will be at a restaurant near by. Check out the map to the right to see where everything is located. Depending on your schedule you can book at one of the hotels listed below or if you are able to soak up the sun a little bit longer we have also included links to local beach house rental websites.</p>
-
-    </div>
-
-
-     <div class="slider grid col-one-half mq2-col-full">
-       <div id="map"></div>
-        <h3 id='tableTitle'>Wedding Locations</h3>
-        <div id='eqTable'>
-        </div>
-        <p style='text-align:center'>*Draw Bridge opens on the hour.</p>
-     </div>
-
-     </section>
+        <figure class=" col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half" style='margin-left: auto;margin-right: auto;display: inline-block; padding-left:1em;'>
+          <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=541390670&pwsurl=" target="_">
+          <img src="img/wedding/bed-bath-and-beyond-ts300.gif" alt="" class="thumb">
+          <span class="zoom"></span>
+          </a>
+          <figcaption>
+            <p style='font-weight:bold;'>Bed Bath & Beyond</p>
+          </figcaption>
+        </figure>
+  </section>
 
 
   </div> <!--main-->
