--- a/ceremony.html
+++ b/ceremony.html
@@ -106,31 +106,30 @@
 <section class="works grid-wrap" style='text-align:center; '>
   <header class="grid col-full">
       <hr>
-      <h3 style="color:#0e0cbf" class="">Registry</h3>
-      <p style="font-size:14px;">What we want most for our wedding is to have all of our friends and family together.<br>
-      However, if you would like to get us something we are registered at:</p>
+      <h3 style="color:#0e0cbf" class="">WITH SANDY TOES & SALTY KISSES WE BECOME MR. & MRS.</h3>
+      <h6 style="color:#0e0cbf" class="">5:15 PM: SATURDAY, JUNE 20TH</h6>
+      <p style="font-size:14px;">Outdoor ceremony in front of the Goldsworthy’s house to start at 5:15 PM with refreshments provided beforehand. <br>Parking at the ceremony location is limited so transportation will be provided from Bluewater Grill starting at 4:20 pm.</p><small><span style="color:#0e0cbf">Bluewater Grill</span>: 4 Marina St. Wrightsville Beach, NC 28480 | <span style="color:#0e0cbf">Ceremony</span>: 11 Sandpiper St. Wrightsville Beach, NC 28480</small>
       <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
     </header>
-        <figure class=" col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half" style='margin-left: auto;margin-right: auto; display: inline-block; padding-right:1em;'>
-          <a href="http://www.amazon.com/gp/registry/wedding/NEIX6VEMDEK9" target="_">
-          <img src="img/wedding/amazon-logo-300x200.png" alt="" class="thumb">
-          <span class="zoom"></span>
-          </a>
-          <figcaption>
-            <p style='font-weight:bold;'>Amazon</p>
-          </figcaption>
-        </figure>
 
-        <figure class=" col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half" style='margin-left: auto;margin-right: auto;display: inline-block; padding-left:1em;'>
-          <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=541390670&pwsurl=" target="_">
-          <img src="img/wedding/bed-bath-and-beyond-ts300.gif" alt="" class="thumb">
-          <span class="zoom"></span>
-          </a>
-          <figcaption>
-            <p style='font-weight:bold;'>Bed Bath & Beyond</p>
-          </figcaption>
-        </figure>
+    <header class="grid col-full">
+      <hr>
+      <h3 style="color:#0e0cbf" class="">EAT, DRINK, AND WE’RE MARRIED</h3>
+      <h6 style="color:#0e0cbf" class="">6:00 PM: SATURDAY, JUNE 20TH</h6>
+      <p style="font-size:14px;">The reception will be held at Bluewater Grill immediately following the ceremony. <br>Transportation will be provided from the ceremony to Bluewater Grill and home after the reception if you are staying in the area.</p><small><span style="color:#0e0cbf">Bluewater Grill</span>: 4 Marina St. Wrightsville Beach, NC 28480 </small>
+      <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
+    </header>
+
+    <header class="grid col-full">
+      <hr>
+      <h3 style="color:#0e0cbf" class="">ALL YOU NEED IS LOVE, AND MAYBE A DONUT</h3>
+      <h6 style="color:#0e0cbf" class="">10:30 AM: SUNDAY, JUNE 21ST</h6>
+      <p style="font-size:14px;">On Sunday morning don’t pack and run. <br>Join us for brunch at the ceremony house.</p><small><span style="color:#0e0cbf">Goldsworthy House</span>: 11 Sandpiper St. Wrightsville Beach, NC 28480</small>
+      <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
+    </header>
+
   </section>
+
 
 
   </div> <!--main-->
