--- a/LGCGwedding.html
+++ b/LGCGwedding.html
@@ -79,29 +79,31 @@
 <!-- Prompt IE 7 users to install Chrome Frame -->
 <!--[if lt IE 8]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
-<div class="container">
+<div class="container" >
 
-  <header id="navtop">
-    <a href="LGCGwedding.html" class="">
-            <!-- <span id="nameheader">Lindsay and Colin's Wedding</span> -->
-            <!-- Ues for logo -->
-      <img src="img/wedding/LCG-seal.jpg" alt="Wedding Seal" class='weddingSeal'>
-    </a>
+  <header id="navtop" >
+    <div style='max-width: 100%; text-align:center;'>
+      <a href="ceremony.html" class="" >
 
-    <!-- <nav class="fright">
-      <ul>
-        <li><a href="index.html" class="navactive">Home</a></li>
-        <li><a href="resume.html">Resume</a></li>
-      </ul>
-      <ul>
-        <li><a href="works.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul> -->
-      <!-- <ul>
-        <li><a href="blog.html">Blog</a></li>
-                <li><a href="services.html">Services</a></li>
-      </ul> -->
-<!--     </nav> -->
+        <img src="img/wedding/rings4.svg" alt="Wedding Seal" class='weddingSeal' style='max-width:3.3em; max-height:3.3em; margin:2em;'>
+      </a>
+      <a href="travel.html" class="" >
+
+        <img src="img/wedding/airplane105.svg" alt="Wedding Seal" class='weddingSeal' style='max-width:3.3em; max-height:3.3em;margin:2em;'>
+      </a>
+      <a href="LGCGwedding.html" class="" >
+
+        <img src="img/wedding/LCG-seal.jpg" alt="Wedding Seal" class='weddingSeal'>
+      </a>
+      <a href="wilmington.html" class="" >
+
+        <img src="img/wedding/island.svg" alt="Wedding Seal" class='weddingSeal' style='max-width:3.3em; max-height:3.3em;margin:2em;'>
+      </a>
+      <a href="registry.html" class="" >
+
+        <img src="img/wedding/gift85.svg" alt="Wedding Seal" class='weddingSeal' style='max-width:3.3em; max-height:3.3em;margin:2em;'>
+      </a>
+  </div>
   </header>
 
 
@@ -140,129 +142,7 @@
 
      </section>
 
-    <!-- Uncomment for text row section -->
-  <!-- <section class="services grid-wrap">
-    <header class="grid col-full">
-      <hr>
-      <p class="fleft">Portfolio</p>
-      <a href="services.html" class="arrow fright">see more services</a>
-    </header>
 
-    <article class="grid col-one-third mq3-col-full">
-      <aside>01</aside>
-      <h5>Web design</h5>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.</p>
-    </article>
-
-    <article class="grid col-one-third mq3-col-full">
-      <aside>02</aside>
-      <h5>Web development</h5>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.</p>
-    </article>
-
-    <article class="grid col-one-third mq3-col-full">
-      <aside>03</aside>
-      <h5>Graphic design</h5>
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.</p>
-    </article>
-  </section> -->
-
-<section class="works grid-wrap">
-  <header class="grid col-full">
-      <hr>
-      <h3 style="text-align:left;" class="">Suggested Hotels</h3>
-      <p style="font-size:14px;">Below hotels have a prefered rate under Goldsworth/Gerber Wedding<br>
-      <small>Please note because of the summer season these hotels require you to book two nights.</small></p>
-      <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
-    </header>
-
-      <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-        <a href="http://hamptoninn3.hilton.com/en/hotels/north-carolina/hampton-inn-and-suites-wilmington-wrightsville-beach-ILMWVHX/index.html" target="_">
-        <img src="img/wedding/hampton.jpg" alt="" class="thumb">
-        <span class="zoom"></span>
-        </a>
-        <figcaption>
-          <p style='font-weight:bold;'>Hampton Inn & Suites</p>
-        </figcaption>
-        <p>Only a mile from the reception and two from the beach.</p>
-        <p>1989 Eastwood Road <br>
-        Wilmington, NC 28403</p>
-        <p>1 King - $169/night + tax<br>
-        2 Doubles - $199/night + tax</p>
-        <p>Book by May 8th to receive group rate<br>
-        <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-GGW-20150619/index.jhtml?WT.mc_id=POG" target="_">Online reservations</a><br>
-        Call for reservation: 910-256-9600</p></p>
-      </figure>
-
-      <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-        <a href="http://www.ihg.com/holidayinnresorts/hotels/us/en/wrightsville-beach/wrgnc/hoteldetail" target="_">
-        <img src="img/wedding/holiday.jpg" alt="" class="thumb">
-        <span class="zoom"></span>
-        </a>
-        <figcaption>
-          <p style='font-weight:bold;'>Holiday Inn Resort</p>
-        </figcaption>
-        <p>If you want to wake up to the sound of the ocean, this is the place for you.</p>
-        <p>1706 N. Lumina Ave <br>
-        Wrightsville Beach, NC 28480</p>
-        <p>Ocean Front - $299/night + tax<br>
-        Harbor - $269/night + tax</p>
-        <p>Book by May 20th to receive group rate<br>
-        Call for reservation: 910-256-2231</p>
-      </figure>
-  </section>
-
-    <section class="works grid-wrap">
-    <header class="grid col-full">
-            <hr>
-            <h3 class="fleft">Beach House Rentals</h3>
-            <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
-        </header>
-
-            <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.bryantre.com/" target="_">
-                <img src="img/wedding/bryant.jpg" alt="" class="thumb">
-                <span class="zoom"></span>
-                </a>
-                <figcaption>
-                    <a href="http://www.bryantre.com/" target="_" class="thumbtext">Bryant Real Estate</a>
-                </figcaption>
-                <p>Week long beach house rentals.</p>
-            </figure>
-
-            <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.intracoastalrealty.com/" target="_">
-                <img src="img/wedding/intracoastal.jpg" alt="" class="thumb">
-                <span class="zoom"></span>
-                </a>
-                <figcaption>
-                    <a href="http://www.intracoastalrealty.com/" target="_" class="thumbtext">Intracoastal Reality</a>
-                </figcaption>
-                <p>Week long beach house rentals.</p>
-            </figure>
-
-            <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.homeaway.com/vacation-rentals/north-carolina/wrightsville-beach/r7982" target="_">
-                <img src="img/wedding/homeaway.png" alt="" class="thumb">
-                <span class="zoom"></span>
-                </a>
-                <figcaption>
-                    <a href="http://www.homeaway.com/vacation-rentals/north-carolina/wrightsville-beach/r7982" target="_" class="thumbtext">HomeAway</a>
-                </figcaption>
-                <p>Shorter term house renting options.</p>
-            </figure>
-
-            <figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
-                <a href="http://www.vrbo.com/vacation-rentals/usa/north-carolina/coastal/southern-coast/wrightsville-beach" target="_">
-                <img src="img/wedding/vrbo.png" alt="" class="thumb">
-                <span class="zoom"></span>
-                </a>
-                <figcaption>
-                    <a href="http://www.vrbo.com/vacation-rentals/usa/north-carolina/coastal/southern-coast/wrightsville-beach" target="_" class="thumbtext">VRBO</a>
-                </figcaption>
-                <p>Shorter term house renting options.</p>
-            </figure>
-    </section>
   </div> <!--main-->
 
 <div class="divide-top">
