wilmington wedding page

--- a/ceremony.html
+++ b/ceremony.html
@@ -115,8 +115,8 @@
     <header class="grid col-full">
       <hr>
       <h3 style="color:#0e0cbf" class="">EAT, DRINK, AND WE’RE MARRIED</h3>
-      <h6 style="color:#0e0cbf" class="">6:00 PM: SATURDAY, JUNE 20TH</h6>
-      <p style="font-size:14px;">The reception will be held at Bluewater Grill immediately following the ceremony. <br>Transportation will be provided from the ceremony to Bluewater Grill and home after the reception if you are staying in the area.</p><small><span style="color:#0e0cbf">Bluewater Grill</span>: 4 Marina St. Wrightsville Beach, NC 28480 </small>
+      <h6 style="color:#0e0cbf" class="">6:00 PM - 11:00 PM: SATURDAY, JUNE 20TH</h6>
+      <p style="font-size:14px;">The reception will be held at Bluewater Grill immediately following the ceremony. <br>Transportation will be provided from the ceremony to Bluewater Grill and home after the reception if you are staying in the area.<br>Transportation home will start at 10:20 PM.</p><small><span style="color:#0e0cbf">Bluewater Grill</span>: 4 Marina St. Wrightsville Beach, NC 28480 </small>
       <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
     </header>
 
