--- a/lgcgwedding.html
+++ b/lgcgwedding.html
@@ -118,7 +118,7 @@
     <div class="grid col-one-half mq2-col-full aboutme">
       <div id="personalpic">
                 <img src="img/wedding/colin_linds_pier.jpg" alt="" class="roundedimg">
-                <p style="font-size:10px; font-style:italic;">Photo Credit: First Mate, John Wierather</p>
+                <p style="font-size:10px; font-style:italic;">Photo Credit: First Mate, John Weirather</p>
             </div>
 
             <h2 style="color:#0e0cbf">6.20.2015</h2>
