update hotel date

--- a/travel.html
+++ b/travel.html
@@ -131,7 +131,7 @@
           Wilmington, NC 28403</p>
           <p>1 King - $169/night + tax<br>
           2 Doubles - $199/night + tax</p>
-          <p>Book by May 12th to receive group rate<br>
+          <p>EXTENDED - Book by May 12th to receive group rate<br>
           <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/I/ILMWVHX-GGW-20150619/index.jhtml?WT.mc_id=POG" target="_">Online reservations</a><br>
           Call for reservation: 910-256-9600</p>
         </figure>
