--- a/travel.html
+++ b/travel.html
@@ -114,7 +114,7 @@
   <header class="grid col-full">
       <hr>
       <h3 style="color:#0e0cbf" class="">Suggested Hotels</h3>
-      <p style="font-size:14px;">Below hotels have a prefered rate under Goldsworth/Gerber Wedding<br>
+      <p style="font-size:14px;">Below hotels have a prefered rate under Goldsworthy/Gerber Wedding<br>
       <small>Please note because of the summer season these hotels require you to book two nights.</small></p>
       <!-- <a href="works.html" class="thumbtext fright">see more projects</a> -->
     </header>
@@ -210,7 +210,7 @@
     <section class="works grid-wrap" style='text-align:center; '>
   <header class="grid col-full">
       <hr>
-      <h3 style="color:#0e0cbf" class="">Nearby Airports</h3>
+      <h3 style="color:#0e0cbf" class="">Near By Airports</h3>
       <p style="font-size:14px;">Below are maps showing the two closest airports<br></p>
 
     </header>
