--- a/clinical_trials_final.html
+++ b/clinical_trials_final.html
@@ -108,7 +108,7 @@
         <h6>Links</h6>
         <ul class="mbottom">
             <li><a href="https://github.com/jasonost/clinicaltrials">Github Repository</a></li>
-            <li><a href="http://groups.ischool.berkeley.edu/clinicaltrials/">Live Site</a></li>
+            <li><a href="http://discoverct.org/">Live Site</a></li>
         </ul>
 
         <h6>Other Contributors</h6>
@@ -131,7 +131,7 @@
         <section class="grid col-three-quarters mq2-col-two-thirds mq3-col-full">
 
         <figure class="">
-            <a href="http://groups.ischool.berkeley.edu/clinicaltrials/" >
+            <a href="http://discoverct.org/" >
             <img src="img/clinical_trial_final_thumb.jpg" alt="" >
             </a>
             <figcaption>
@@ -145,7 +145,7 @@
         <p>In order to support a better search interaction for the clinical trials data we decided we would need to focus three fundamental building blocks to start with. Thos three building blocks were deduplicating the institutions/facilities in the database, creating research author graph, and implementing a thesaurus of MeSH terms to common terms.</p>
 
         <figure class="">
-            <a href="http://groups.ischool.berkeley.edu/clinicaltrials/" >
+            <a href="http://discoverct.org/" >
             <img src="img/building_blocks.jpg" alt="" >
             </a>
             <figcaption>
