--- a/clinical_trials_final.html
+++ b/clinical_trials_final.html
@@ -138,6 +138,7 @@
             </figcaption>
             <p>With this project we created a search interface that allows users to seach for diseases or institutions and see what type of clinical trials are currently happened or have happened in those particular categories. The main target audience for this project are patients that have been diagnosed with a cerious disease and are trying to find a clinical trial they can enroll in to get help.</p>
             <p>A lot of work went into the back end of this project including cleaning the data, deduplicating the data, and linking in more related data. You can continue on below to see some examples of these processes.</p>
+            <p>This project won the <a href="http://www.ischool.berkeley.edu/programs/mims/projects/chenawards">Dr. James R. Chen Award</a> at the I School at UC Berkeley.</p>
         </figure>
 
         <h3>Data Processing for the Project</h3>
