--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <h2>About Me</h2>
 
-			<p>I am currently getting my <a href="http://www.ischool.berkeley.edu/">Masters in Information Management and Systems (MIMS)</a> from the I School at UC Berkeley.</p>
+			<p>I recently graduated with a <a href="http://www.ischool.berkeley.edu/">Masters in Information Management and Systems (MIMS)</a> from the I School at UC Berkeley.</p>
 
             <p>Before Berkeley I worked in a <a href="http://www.ninds.nih.gov/research/labs/68.htm">Neurophysiological Pharmacology Lab</a> at the National Institute of Neurological Disease and Stroke at the National Institutes of Health. My undergraduate degree was a B.S. in Neuroscience from the University of California, Santa Barbara.</p>
 
@@ -223,7 +223,7 @@
 				<figcaption>
 					<a href="clinical_trials_final.html" class="thumbtext">Clinical Trials Search Interface</a>
 				</figcaption>
-                <p>MIMS Final Project. Clinical Trials Final Project.</p>
+                <p>MIMS Final Project. Clinical Trials search interface and data improvement.</p>
 			</figure>
 
 			<figure class="grid col-one-quarter mq2-col-one-half mq3-col-full work_1 mq1-col-one-half">
