turning off contact form

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
 			<h2>Send me a message</h2>
 			<p class="warning">Include your name, email and message below.</p>
 
-			<form action="http://getsimpleform.com/messages?form_api_token=9b501984332731d2181f0ca879100ec7" method="post">
+			<!--<form action="http://getsimpleform.com/messages?form_api_token=9b501984332731d2181f0ca879100ec7" method="post">-->
 			  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
 			  <input type='hidden' name='redirect_to' value='http://colingerber.com/thanks.html' />
 			  <!-- all your input fields here.... -->
